2002-01-30  Philippe Elie  <ph_e@club-internet.fr>

	* configure.in:
	* doc/oprofile.sgml:
	* module/compat22.h: remove support for kernel version
	  prior to 2.2.11

	* module/op_fixmap.c:
	* module/compat.h: small cleanup

	* module/oprofile.c: avoid multi-line literal string

	* pp/oprofpp_util.cpp: better to get_symbols() ;)

2002-01-29  John Levon  <moz@compsoc.man.ac.uk>

	* module/op_fixmap.c: remap fake mapping on 2.2 as well
	  when necessary
 
2002-01-27  Philippe Elie  <ph_e@club-internet.fr>

	* module/Makefile.in: sorry, -Werror is only usefull
	  for test.

	* doc/oprofile.1.in: a few words about op_stop

	* module/compat.h:
	* module/compat22.h:
	* module/compat24.h: change pte_page_address definition
	  for 2.2.20

	* pp/opf_container.cpp: no warning when creating artificial symbols
	* pp/oprofpp_tuil.cpp: no warning for image without symbols

2002-01-27  John Levon  <moz@compsoc.man.ac.uk>

	* gui/oprof_start.cpp:
	* pp/op_merge.cpp:
	* pp/op_time.cpp:
	* pp/opf_container.cpp: std namespace fixes.
 
2002-01-27  John Levon  <moz@compsoc.man.ac.uk>

	* pp/op_time.cpp: small hacky output cleanup
 
2002-01-27  Philippe Elie  <ph_e@club-internet.fr>

	* TODO: update

	* dae/opd_proc.c: small cleanup

	* doc/opf_container.cpp: handle image without symbols

	* doc/oprofile.1.in:
	* doc/oprofile.sgml:
	* doc/op_time.cpp: implement and document --demangle
	  and --show-image-name

	* pp/oprofpp_util.cpp: add using elf symbols size but
	  disable it

2002-01-26  John Levon  <moz@compsoc.man.ac.uk>

	* TODO: update

	* dae/opd_proc.c: tiny clean

	* doc/oprofile.sgml: spell fix
 
2002-01-26  Philippe Elie  <ph_e@club-internet.fr>

	* TODO: update

	* pp/op_merge.c: remove FIXME
	* pp/op_time.cpp: minor fix
	
	* pp/opf_filter.h:
	* pp/opf_filter.cpp:
	* pp/oprofpp.cpp:
	* pp/opf_container.cpp: Show more clearly than
	  samples_files_t support adding any number of samples
	  files to the underlined container.

2002-01-26  Philippe Elie  <ph_e@club-internet.fr>
