@@ -87,8 +87,14 @@
 #ifndef MSR_P6_PERFCTR0
 #define MSR_P6_PERFCTR0 0xc1
 #endif
+#ifndef MSR_P6_PERFCTR1
+#define MSR_P6_PERFCTR1 0xc2
+#endif
 #ifndef MSR_P6_EVNTSEL0
 #define MSR_P6_EVNTSEL0 0x186
+#endif
+#ifndef MSR_P6_EVNTSEL1
+#define MSR_P6_EVNTSEL1 0x187
 #endif
 #ifndef MSR_IA32_APICBASE
 #define MSR_IA32_APICBASE 0x1B
@@ -96,8 +102,26 @@
 #ifndef MSR_K7_PERFCTL0
 #define MSR_K7_PERFCTL0 0xc0010000
 #endif
+#ifndef MSR_K7_PERFCTL1
+#define MSR_K7_PERFCTL1 0xc0010001
+#endif
+#ifndef MSR_K7_PERFCTL2
+#define MSR_K7_PERFCTL2 0xc0010002
+#endif
+#ifndef MSR_K7_PERFCTL3
+#define MSR_K7_PERFCTL3 0xc0010003
+#endif
 #ifndef MSR_K7_PERFCTR0
 #define MSR_K7_PERFCTR0 0xc0010004
+#endif
+#ifndef MSR_K7_PERFCTR1
+#define MSR_K7_PERFCTR1 0xc0010005
+#endif
+#ifndef MSR_K7_PERFCTR2
+#define MSR_K7_PERFCTR2 0xc0010006
+#endif
+#ifndef MSR_K7_PERFCTR3
+#define MSR_K7_PERFCTR3 0xc0010007
 #endif
 
 #ifndef APIC_SPIV_APIC_ENABLED
